--- a/style.css
+++ b/style.css
@@ -1,18 +1,115 @@
 body {
-    --font-txt-principal: font-family: "Mulish", sans-serif;
-    --font-color-principal:#000000;
-    --font-color-highlight:#89C5CC;
-    --font-txt-secondary: font-family: "Open Sans", sans-serif;
-    --font-color-secondary: #7D7987;
-    --color-button: #69B99D;
+  --font-txt-principal: "Mulish", sans-serif;
+  --font-color-principal: #000000;
+  --font-color-highlight: #89c5cc;
+  --font-txt-secondary: "Open Sans", sans-serif;
+  --font-color-secondary: #7d7987;
+  --color-button: #69b99d;
+  --color-button-hover: #4e8c76;
 
-    /* Retirar a margem padrao do navegador */
-    margin: 0px;
+  font-family: var(--font-txt-secondary);
+  color: var(--font-color-secondary);
 
-    .page {
-        border: 1px solid red;
-        max-width: 1000px;
-        margin: 65px auto 0;
+  /* Retirar a margem padrao do navegador */
+  margin: 0;
+  min-height: 100vh;
+
+  background: linear-gradient(
+    180deg,
+    rgba(227, 255, 248, 0) 82.08%,
+    rgba(227, 255, 248, 0.38) 100%
+  );
+
+  .page {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding-top: 65px;
+
+    nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 55px;
+
+      ul {
+        font-family: var(--font-txt-principal);
+        list-style: none;
+        display: flex;
+        gap: 48px;
+        margin: 0px;
+        padding: 0px;
+
+        li a {
+          text-decoration: none;
+          color: var(--font-color-secondary);
+        }
+
+        li a:hover {
+          color: var(--font-color-principal);
+          font-weight: bold;
+        }
+      }
     }
-    
+
+    main {
+      display: flex;
+      justify-content: space-between;
+      .text {
+        h1 {
+          font-family: var(--font-txt-principal);
+          color: var(--font-color-principal);
+          max-width: 490px;
+          font-weight: normal;
+          font-size: 49px;
+          line-height: 56px;
+          margin-bottom: 40px;
+
+          strong {
+            color: var(--font-color-highlight);
+          }
+        }
+
+        p {
+          max-width: 438px;
+          font-size: 14px;
+          line-height: 28px;
+          margin-bottom: 40px;
+        }
+
+        button {
+          text-transform: uppercase;
+          background-color: var(--color-button);
+          color: white;
+          border: none;
+          border-radius: 4px;
+          padding: 14px 32px;
+          display: flex;
+          align-items: center;
+          gap: 10px;
+          cursor: pointer;
+        }
+
+        button:hover {
+          background-color: var(--color-button-hover);
+        }
+      }
+    }
+
+    footer {
+      font-size: 14px;
+      line-height: 28px;
+      text-align: center;
+      margin-top: 20%;
+      strong {
+        cursor: pointer;
+        color: var(--font-color-principal);
+      }
+    }
+  }
+
+  #balls {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+  }
 }
